# poetry2nix

.github/workflows/: ci.yml
overrides/: build-systems.json  default.nix
tests/: default.nix
tests/common-pkgs-1/: default.nix  pyproject.toml
tests/common-pkgs-2/: pyproject.toml
tests/cryptography/: default.nix  pyproject.toml
tests/manylinux/: default.nix
tests/orjson-test/: versions.json
tests/panel-wheels/: default.nix  pyproject.toml
tests/pep600/: default.nix
tests/ruff/: pyproject.toml
tests/scientific/: pyproject.toml
tests/shapely-pre-2/: pyproject.toml
