[tool.poetry]
name = "common-pkgs-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.25.4"
six = "^1.16.0"
botocore = "^1.34.88"
requests = "^2.31.0"
s3transfer = "^0.10.0"
certifi = "^2024.2.2"
pyyaml = "^6.0.1"
pyasn1 = "^0.5.0"
idna = "^3.7"
docutils = "^0.21.1"
rsa = "^4.9"
chardet = "^5.2.0"
jmespath = "^1.0.1"
colorama = "^0.4.6"
pytz = "^2024.1"
simplejson = "^3.19.2"
boto3 = "^1.34.88"
wheel = "^0.42.0"
numpy = "^1.26.4"
protobuf = "^4.21.5"
markupsafe = "^2.1.5"
jinja2 = "^3.1.3"
pyasn1-modules = "^0.4.0"
attrs = "^23.2.0"
google-api-core = "^2.18.0"
cachetools = "^5.3.3"
click = "^8.1.7"
future = "^1.0.0"
pycparser = "^2.21"
google-auth = "^2.29.0"
grpcio = "^1.62.2"
google-cloud-core = "^2.4.1"
asn1crypto = "^1.5.1"
werkzeug = "^3.0.2"
googleapis-common-protos = "^1.63.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
