[tool.poetry]
name = "common-pkgs-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
pyparsing = "^3.1.2"
cryptography = "^42.0.5"
decorator = "^5.1.1"
flask = "^3.0.3"
pluggy = "^1.5.0"
itsdangerous = "^2.2.0"
more-itertools = "^10.2.0"
ipaddress = "^1.0.23"
oauthlib = "^3.2.0"
coverage = "^7.4.4"
py = "^1.8.0"
psutil = "^5.9.8"
jsonschema = "^4.21.1"
requests-oauthlib = "^2.0.0"
pygments = "^2.17.2"
mock = "^5.1.0"
pbr = "^6.0.0"
pyjwt = "^2.8.0"
wrapt = "^1.16.0"
google-cloud-storage = "^2.16.0"
websocket-client = "^1.7.0"
wcwidth = "^0.2.13"
ipython = "^8.23.0"
boto = "^2.49.0"
httplib2 = "^0.22.0"
prompt-toolkit = "^3.0.0"
atomicwrites = "^1.4.0"
docker = "^7.0.0"

# pip >=20.3 hardcodes its ignorance of a few modules that clash with stdlib
# modules; one of those modules is argparse, so it can only be used where it's
# actually required, otherwise pip thinks it's never installed
#
# Here's the hardcoded list:
# https://github.com/pypa/pip/blob/e6891135776732d137ef3591d58d0de624521628/src/pip/_internal/utils/compat.py#L59
#
# Here's the code that skips over the list:
# https://github.com/pypa/pip/blob/e6891135776732d137ef3591d58d0de624521628/src/pip/_internal/metadata/base.py#L194-L222
argparse = { version = "^1.4.0", python = "<2.7" }

zipp = "^3.18.1"
google-resumable-media = "^2.7.0"
multidict = "^6.0.5"
sqlalchemy = "^2.0.29"
kiwisolver = "^1.4.5"
funcsigs = "^1.0.2"
configparser = "^7.0.0"
tornado = "^6.4"
tqdm = "^4.66.2"
google-api-python-client = "^2.126.0"
markdown = "^3.6"
oauth2client = "^4.1.3"
aiohttp = "^3.9.5"
pyopenssl = "^24.1.0"
pillow = "^10.3.0"
psycopg2 = "^2.9.9"
bcrypt = "^4.1.2"
mccabe = "^0.7.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
