[tool.poetry]
name = "test-cryptography"
version = "0.1.0"
description = "Test of the cryptography package"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^42.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
