[tool.poetry]
name = "test-panel-wheels"
version = "0.1.0"
description = "Test of wheel for panel, pillow and bokeh"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bokeh = "^3.4.1"
panel = "^1.4.1"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core>=1"]
build-backend = "poetry.core.masonry.api"
