[tool.poetry]
name = "scientific_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
scipy = "*"
scikit-learn = "*"
seaborn = "*"
pandas = "*"
jupyter = "*"
psutil = "*"
nbconvert = "*"

# FIXME: pin a lower version until we figure out how to build newer ones
pyzmq = "<26"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"
